出力先の変更

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,5 @@
+site_dir: '../cppmap.github.io'
+
 # Project information
 site_name: C++ の歩き方 | CppMap
 site_description: C++17, C++20, C++23, C++26 に関する情報を調査・提供します
@@ -9,7 +11,7 @@ repo_url: https://github.com/cppmap/cppmap.docs
 edit_uri: ""
 
 # Copyright
-copyright: To the extent possible under law, Ryo Suzuki has waived all copyright and related or neighboring rights to C++ の歩き方 | CppMap.  Third party copyrights are property of their respective owners.
+copyright: To the extent possible under law, Ryo Suzuki has waived all copyright and related or neighboring rights to C++ の歩き方 | CppMap. Third party copyrights are property of their respective owners.
 
 # Theme
 theme:
