言語設定変更

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ theme:
     tabs: true
 extra:
   search:
-  language: 'jp, en'
+    language: 'jp'
 markdown_extensions:
   - admonition
   - codehilite
