コミュニティ

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,5 +48,6 @@ nav:
   - 学習:
     - オンライン資料: learn/online-resources.md
     - 国内の勉強会: learn/studymeetings.md
+    - コミュニティ: learn/communities.md
   - ツール:
     - オンラインコンパイラ: tools/onlinecompilers.md
