ハッシュテーブル

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,5 +49,7 @@ nav:
     - オンライン資料: learn/online-resources.md
     - 国内の勉強会: learn/studymeetings.md
     - コミュニティ: learn/communities.md
+  - ライブラリ:
+    - コンテナ: libraries/containers.md
   - ツール:
     - オンラインコンパイラ: tools/onlinecompilers.md
