--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,8 +43,9 @@ extra_css:
 nav:
   - Home: index.md
   - C++ 規格:
-    - 標準化会議: standardization/meetings.md
+    - C++20 の新機能: standardization/cpp20.md
     - C++23 以降に向けた提案: standardization/cppx.md
+    - 標準化会議: standardization/meetings.md
   - 学習:
     - オンライン資料: learn/online-resources.md
     - 国内の勉強会: learn/studymeetings.md
