文面修正、add social

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,9 @@ theme:
 extra:
   search:
     language: 'jp'
+  social:
+    - type: 'twitter'
+      link: 'https://twitter.com/Reputeless'
 markdown_extensions:
   - admonition
   - codehilite
