--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ markdown_extensions:
   - codehilite
   - fontawesome_markdown
   - footnotes
+  - meta
   - pymdownx.inlinehilite
   - pymdownx.magiclink
   - pymdownx.superfences
