--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,8 @@ nav:
     - コメントアウトのトリック: articles/comment-tricks.md
     - なぜかコンパイルできる: articles/it-compiles.md
     - なぜかコンパイルできない: articles/it-does-not-compile.md
-    - 予約語の読み方と名前の由来: articles/how-to-read-keywords.md
+    - 予約語の読みと名前の由来: articles/how-to-read-keywords.md
+    - 標準ライブラリの読みと名前の由来: articles/how-to-read-keywords.md 
   - 学習:
     - 書籍: learn/books.md
     - オンライン資料: learn/online-resources.md
