検索を改善
"std::midpoint" や "static_cast" で検索可能に

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,8 @@ theme:
     tabs: true
 extra:
   search:
-    language: 'jp'
+    language: 'en, jp'
+    tokenizer: '[\s]+'
   social:
     - type: 'twitter'
       link: 'https://twitter.com/Reputeless'
