--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
     - 国内の勉強会: learn/studymeetings.md
     - コミュニティ: learn/communities.md
   - ライブラリ:
+    - Boost: libraries/boost.md
     - コンテナ: libraries/containers.md
     - テキストデータ: libraries/text-data.md   
   - ツール:
