mkdocs-material のバージョンアップ (4.2.0)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ theme:
     tabs: true
 extra:
   search:
-    language: 'en, jp'
+    language: 'en, ja'
     tokenizer: '[\s　、。，．がのをにへとでやかもる「」『』]+'
   social:
     - type: 'twitter'
