--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,7 +70,9 @@ nav:
   - ライブラリ:
     - Boost: libraries/boost.md
     - コンテナ: libraries/containers.md
-    - テキストデータ: libraries/text-data.md   
+    - テキストデータ: libraries/text-data.md
+    - 平行・並列: libraries/multi-threading.md
+    - テストフレームワーク: libraries/testing.md
   - ツール:
     - オンラインコンパイラ: tools/onlinecompilers.md
     - パッケージマネージャ: tools/package-manager.md
