--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
     - テキストデータ: libraries/text-data.md
     - 並行・並列: libraries/multi-threading.md
     - テストフレームワーク: libraries/testing.md
+    - 数学: libraries/math.md
   - ツール:
     - C++ コンパイラ: tools/compilers.md
     - C++ オンラインコンパイラ: tools/onlinecompilers.md
