--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
     - 標準ライブラリの読みと名前の由来: articles/how-to-read-libraries.md
     - IEEE 754 演算のルール: articles/ieee754-arithmetic.md
     - C++ 関連の略語: articles/acronyms.md
+    - C++ 型特性 早見表: articles/type-traits.md
   - 学習:
     - C++ 書籍: learn/books.md
     - C++ オンライン資料: learn/online-resources.md
