--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,7 +56,7 @@ nav:
     - C++23 以降に向けた提案: standardization/cppx.md
     - 標準化会議: standardization/meetings.md
     - 処理系の対応状況: standardization/status.md
-    - 規格ドラフト: standardization/working-drafts.md
+    - C++ 規格書: standardization/working-drafts.md
     - C++ 標準ライブラリ: standardization/header.md
   - 記事:
     - コメントアウトのトリック: articles/comment-tricks.md
