--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,7 +78,7 @@ nav:
     - Boost: libraries/boost.md
     - コンテナ: libraries/containers.md
     - テキストデータ: libraries/text-data.md
-    - 並行・並列: libraries/multi-threading.md
+    - 並行・並列: libraries/concurrency.md
     - テストフレームワーク: libraries/testing.md
     - 数学: libraries/math.md
   - ツール:
