--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ nav:
   - 学習:
     - C++ 書籍: learn/books.md
     - C++ オンライン資料: learn/online-resources.md
+    - C++ ブログ集: learn/blogs.md
     - 国内の C++ 勉強会: learn/studymeetings.md
     - C++ コミュニティ: learn/communities.md
     - C++ カンファレンス: learn/conferences.md
