--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
   - Home: index.md
   - C++ 規格:
     - C++20 の新機能: standardization/cpp20.md
+    - C++23 の新機能: standardization/cpp23.md
     - C++23 以降に向けた提案: standardization/cppx.md
     - 標準化会議: standardization/meetings.md
     - 処理系の対応状況: standardization/status.md
