--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.magiclink
   - pymdownx.superfences
+  - pymdownx.tabbed
   - toc:
       permalink: true
 extra_css:
