ツール: リンターの追加

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,7 @@ nav:
     - C++ コンパイラ: tools/compilers.md
     - C++ パッケージマネージャ: tools/package-manager.md
     - C++ コードフォーマッタ: tools/code-formatter.md
+    - C++ リンター: tools/linter.md
     - C++ プロジェクトテンプレート: tools/project-template.md
     - C++ 用 .gitignore: tools/gitignore.md
   - 貢献:
